--- a/app/src/main/res/menu/main.xml
+++ b/app/src/main/res/menu/main.xml
@@ -5,13 +5,15 @@
         android:icon="@drawable/rand"
         android:orderInCategory="1"
         android:showAsAction="always"
-        android:title="Shuffle"/>
+        android:title="Shuffle"
+        android:actionLayout="@layout/toolbar"/>
 
     <item
         android:id="@+id/action_end"
         android:icon="@drawable/end"
         android:orderInCategory="2"
         android:showAsAction="always"
-        android:title="End"/>
+        android:title="End"
+        android:actionLayout="@layout/toolbar"/>
 
 </menu>
