--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,6 +6,10 @@
     android:background="@android:color/holo_blue_light"
     tools:context=".MainActivity" >
 
+    <include
+        android:id="@+id/toolbar"
+        layout="@layout/toolbar"></include>
+
     <ListView
         android:id="@+id/song_list"
         android:layout_width="fill_parent"
