--- a/app/src/main/res/menu/main.xml
+++ b/app/src/main/res/menu/main.xml
@@ -5,15 +5,13 @@
         android:icon="@drawable/rand"
         android:orderInCategory="1"
         android:showAsAction="always"
-        android:title="Shuffle"
-        android:actionLayout="@layout/toolbar"/>
+        android:title="Shuffle"/>
 
     <item
         android:id="@+id/action_end"
         android:icon="@drawable/end"
         android:orderInCategory="2"
         android:showAsAction="always"
-        android:title="End"
-        android:actionLayout="@layout/toolbar"/>
+        android:title="End" />
 
 </menu>
